# vibe_rt

./: .gitignore  CMakeLists.txt  README.md  learnings.md  progress.md  prompt.md  stop.md  tasks.md
docs/: refactor_plan.md
src/: main.cpp  obj_loader.cpp  renderer.cpp  rt.cpp
src/accel/: AABB.cpp  AABB.h  AABBIntersect.cpp  AABBIntersect.h  BVH.cpp  BVH.h
src/app/: CameraController.cpp  CameraController.h
src/geometry/: Intersection.cpp  Intersection.h  Ray.cpp  Ray.h  TriangleIntersect.cpp  TriangleIntersect.h
src/headers/: obj_loader.h  renderer.h  rt.h  simple_thread.hpp  thread_pool.hpp
src/math/: Mat3.cpp  Mat3.h  Vector3.cpp  Vector3.h
src/render/: TileRenderer.cpp  TileRenderer.h
src/scene/: IModel.h  Model.cpp  Model.h
tests/: test_aabb.cpp  test_bvh.cpp  test_camera_controller.cpp  test_geometry.cpp  test_math.cpp  test_model.cpp  test_obj_loader.cpp  test_tile_renderer.cpp
